--- a/notebooks/Python_Short_Tutorial_v5.ipynb
+++ b/notebooks/Python_Short_Tutorial_v5.ipynb
@@ -11,8 +11,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The entries in the notebook are editable. To evaluate a cell, click anywhere in it and press SHIFT+ENTER .\n",
-    "The notebook is divided in various sections, showing different features of the Python language and Jupyter Notebooks."
+    "### 0. **Introduction**\n",
+    "\n",
+    "This document is in a special format called Jupyter Notebook that allows Python Code and Text to be mixed in the same page. The document is made of cells, where each can be either a code or text cell. At this very moment you are reading a text cell, but below you will find Python code cells intermingled with text cells. Each text cell can have one or several lines of text, and each code cell can have one or more lines of Python code. You will notice a small \"play\" button beside each code cell. Pressing this button will cause the code cell to be evaluated, meaning that the Python code therein will be run, and some output may be produced. You can also use the keyboard shortcut SHIFT+ENTER to evaluate a cell. To edit text cells, just click on them, and the unformatted content will be made available. Text cells don't have a \"play\" button, but doing SHIFT+ENTER on them will close the edit mode and move the cursor over to the next cell.\n",
+    "\n",
+    "Before we start, keep in mind that the code on each cell can affect the results of any other cell (for instance, if you declare a variable with a certain value, that variable will automatically be known to every other cell in the notebook). Also, even though the cells in this notebook are laid out in a logical learning progression, they don't need to be run on any specific order - at any moment you can run any given cell by clicking its play button. However, it may be that the cell requires some data declaration or initialization stated on a previous cell - in that case, the cell will likely produce an error mesages, fail to execute the code or produce the wrong results.\n",
+    "\n",
+    "Every time you execute a code cell, the result of running it will be made available on a window immediately below the code cell. Beside the output window there will be a small icon with a square and an arrow - clicking on it will erase the output window. This is useful for instance when cells produce a large amount of unwanted data or error messages.\n",
+    "\n",
+    "Whenever you need to open a new cell in the notebook (for instance to test some code or check variable values), you can use the keyboard shortuct ALT + ENTER on a given cell: il will evaluate the cell (like SHIFT+ENTER) and open a new empty code cell below it. You can also mouse over the space between two cells - if you linger the cursor, two buttons labelled \"+ code\" and \"+ data\" will appear. Pressing them will respectivelye create code and text cells.\n",
+    "\n",
+    "The notebook is divided in various sections, showing different features of the Python language and Jupyter Notebooks. Simply go through it, reading the text cells, evaluating the Python cells, whatching the output, and editing/re-running when appropriate."
    ]
   },
   {
@@ -237,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"aaa\"+\"bbb\" # strings can be added together (concatenation)"
+    "### 1. **Arithmetic expressions and data types**\"aaa\"+\"bbb\" # strings can be added together (concatenation)"
    ]
   },
   {
@@ -2455,7 +2464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
